--- a/FrontEnd/banking-pif3/src/app/app.component.html
+++ b/FrontEnd/banking-pif3/src/app/app.component.html
@@ -1,21 +1,8 @@
 <app-sidebar></app-sidebar>
 
 conteúdo 
+<router-outlet></router-outlet>
 
-<app-login></app-login>
 
 <app-footer></app-footer>
 
-
----------------se logado <p></p>
-<div>
-  <app-bar> </app-bar>
-
-  <div>
-    Alteração cadastral:
-    <app-alteracao-cadastral></app-alteracao-cadastral>
-    
-  </div>
-
-
-</div>
