--- a/FrontEnd/banking-pif3/src/app/app.component.html
+++ b/FrontEnd/banking-pif3/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-sidebar></app-sidebar>
 
-conteúdo 
+conteúdo  <button type="button" class="btn btn-secondary">Secondary</button>
 <router-outlet></router-outlet>
 
 
