rota one page atualizada

--- a/FrontEnd/banking-pif3/src/app/app.component.html
+++ b/FrontEnd/banking-pif3/src/app/app.component.html
@@ -1,7 +1,17 @@
 <app-sidebar></app-sidebar>
 
-conteúdo  <button type="button" class="btn btn-secondary">Secondary</button>
-<router-outlet></router-outlet>
+conteúdo  
+<app-home></app-home>
+<p>
+<app-o-projeto></app-o-projeto>
+<p>
+<app-sobre></app-sobre>
+<p>
+<app-atendimento></app-atendimento>
+<p>
+<app-login></app-login>
+<p>
+<!--se as rotas voltarem <router-outlet></router-outlet> -->
 
 
 <app-footer></app-footer>
