--- a/FrontEnd/banking-pif3/src/app/app.component.html
+++ b/FrontEnd/banking-pif3/src/app/app.component.html
@@ -1,18 +1,11 @@
 <app-sidebar></app-sidebar>
 
 conteúdo  
-<app-home></app-home>
-<p>
-<app-o-projeto></app-o-projeto>
-<p>
-<app-sobre></app-sobre>
-<p>
-<app-atendimento></app-atendimento>
-<p>
-<app-login></app-login>
-<p>
-<!--se as rotas voltarem <router-outlet></router-outlet> -->
 
+<p>
+
+<!--se as rotas voltarem <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
 
