--- a/FrontEnd/banking-pif3/src/app/components/home/home.component.html
+++ b/FrontEnd/banking-pif3/src/app/components/home/home.component.html
@@ -3,3 +3,14 @@
   principal
 <p>
   <img src="../../../assets/images-delete/home.png" />
+
+
+  outras
+  <app-o-projeto></app-o-projeto>
+<p>
+<app-sobre></app-sobre>
+<p>
+<app-atendimento></app-atendimento>
+<p>
+<app-login></app-login>
+<p>
