--- a/FrontEnd/banking-pif3/src/app/components/login/login.component.html
+++ b/FrontEnd/banking-pif3/src/app/components/login/login.component.html
@@ -1,4 +1,15 @@
 <p>
   login works!
+
   <p>
+
+      <form (submit)="loginUser($event)">
+          <input type="text" placeholder="cpf/cnpj" id="document">
+          <input type="text" placeholder="password" id="password">
+          <input type="submit" value="Submit" > 
+          
+        </form>
+
+
+    <p>
     <img src="../../../assets/images-delete/login.png" />
