login/logout/token auth - ok

--- a/FrontEnd/banking-pif3/src/app/admine/admine.component.html
+++ b/FrontEnd/banking-pif3/src/app/admine/admine.component.html
@@ -3,3 +3,11 @@
   \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
   <p> {{ message }}
+
+  <p> <app-menu></app-menu>
+
+   
+    <app-logout></app-logout>
+  
+    
+    <!-- <button routerLink="/logout">Logout2</a> -->
