alteração e criação de componentes, component home é a pagina inicial

--- a/FrontEnd/banking-pif3/src/app/components/home/home.component.html
+++ b/FrontEnd/banking-pif3/src/app/components/home/home.component.html
@@ -1,7 +1,9 @@
-<p>
-  home works!
-  principal
-<p>
+<div class="container">
+    <div class="row">
+        <app-sidebar></app-sidebar> 
+    </div>
+  </div>
+  <app-slide></app-slide>
   <img src="../../../assets/images-delete/home.png" />
 
 
