--- a/FrontEnd/banking-pif3/src/app/app.component.html
+++ b/FrontEnd/banking-pif3/src/app/app.component.html
@@ -1,10 +1,5 @@
-<app-sidebar></app-sidebar>
+<app-home></app-home> 
 
-conteúdo  
-
-<p>
-
-<!--se as rotas voltarem <router-outlet></router-outlet> -->
 <router-outlet></router-outlet>
 
 <app-footer></app-footer>
