--- a/FrontEnd/banking-pif3/src/app/app.component.html
+++ b/FrontEnd/banking-pif3/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-home></app-home> 
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
 
