--- a/FrontEnd/banking-pif3/src/app/core/components/menu/menu.component.html
+++ b/FrontEnd/banking-pif3/src/app/core/components/menu/menu.component.html
@@ -1,4 +1,18 @@
 <p>
+ 
+
+  {{userVar}} //objeto
+ Olá  {{userVar.user.name}}
+ conta:  {{userVar.user.accounts}}
+ sua conta é {{userVar.user.accounts[0]}}
+ seu endereço {{userVar.address}}
+ seu endereço detalhe {{userVar.user.address.number}}
+
+ <p>
+ Agência: 
+
+ <p>
+   Conta:  {{userVar.user.accounts}}
 
   <p>
     <img src="../../../../assets/images-delete/core-home.png" />
