Inserção de paginas

--- a/FrontEnd/banking-pif3/src/app/components/login/login.component.html
+++ b/FrontEnd/banking-pif3/src/app/components/login/login.component.html
@@ -29,13 +29,13 @@
           
         </form> -->
         <form (submit)="loginUser($event)" class="align-icontent-center">
-                <div class="input-box-login">
+                <!-- <div class="input-box-login">
                    <input class=" conta login textchild-estilo" id="conta" name="conta" maxlength="50" required type="number"/>
                    <label  class="conta login textchild-estilo" for="conta">Conta</label>
-                </div>
+                </div> -->
                 <div class="input-box-login">
-                   <input class="  login textchild-estilo" id="agencia" name="agencia" maxlength="50" required type="number"/>
-                   <label  class=" login textchild-estilo" for="agencia">Agência</label>
+                   <input class="  login textchild-estilo"  id="document" name="agencia" maxlength="50" required type="number"/>
+                   <label  class=" login textchild-estilo" for="agencia">CPF/CNPJ</label>
                 </div>
                 <div class="input-box-login">
                    <input class="  login textchild-estilo" id="password" name="password" maxlength="50" required type="password"/>
