--- a/FrontEnd/banking-pif3/src/app/core/components/alteracao-cadastral/alteracao-cadastral.component.html
+++ b/FrontEnd/banking-pif3/src/app/core/components/alteracao-cadastral/alteracao-cadastral.component.html
@@ -1,4 +1,77 @@
-<p>
+
+<app-menu></app-menu>
+<div class="container-fluid  ">
+    <div class="row justify-content-center espaco-lateral">
+      <div class="col-auto mb-3">
+        <!-- REFERENCIAS MESMO BANCO -->
+        <div class=" card-dados-form" id="pagina1" >
+          <div class="card-body">
+            <span>
+              <h3>
+                <img src="../../../assets/images/voltar.png" class="indicadores"/>
+                <img src="../../../assets/images/alterar-cadastro.png" class="titulos-icones"/>
+                Alterar dados cadastrais
+              </h3>
+            </span>
+            <form action="">
+              <div class="container-1 justify-content-center">
+                <div class="box-1">
+                  <div class="input-box  " >
+                    <input class=" textchild-estilo" id="telefone" name="telefone" maxlength="50" required type="phone"/>
+                    <label  class="textchild-estilo" for="telefone">Telefone</label>
+                  </div>
+                  <br>
+                  <div class="input-box-2">
+                    <label  class="texto-tipoConta">Alterar senha?</label>
+                    <select class="textchild-estilo"  id="alteraSenha" >
+                      <option class="textchild-estilo"  value="Sim"> 
+                        Sim
+                      </option>
+                      <option value="Não">
+                        Não
+                      </option>
+                    </select>
+                  </div>
+                  <br>
+                  <div class="input-box">
+                    <input class=" textchild-estilo" id="novaSenha" name="novaSenha" maxlength="50" required type="password"/>
+                    <label  class="textchild-estilo" for="novaSenha">Nova senha</label>
+                  </div>
+                  <br>
+                </div>
+                <div class="box-2">
+                  <div class="input-box">
+                    <input class=" textchild-estilo" id="novoEmail" name="novoEmail" maxlength="50" required type="email"/>
+                    <label  class="textchild-estilo" for="novoEmail">Email</label>
+                  </div>
+                  <br>
+                  <div class="input-box">
+                    <input class=" textchild-estilo" id="senha" name="senha" maxlength="50" required type="password"/>
+                    <label  class="textchild-estilo" for="senha">Senha atual</label>
+                  </div>
+                  <br>
+                  <button type="submit" class="botao" id="nextPage"> Avançar</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <p>
   formulario de alteração cadastral
 </p>
 
@@ -29,4 +102,4 @@
 </form>
 
 <p>
-  <img src="../../../../assets/images-delete/core-altera-dados.png" />
+  <img src="../../../../assets/images-delete/core-altera-dados.png" /> -->
