--- a/FrontEnd/banking-pif3/src/app/components/home/home.component.html
+++ b/FrontEnd/banking-pif3/src/app/components/home/home.component.html
@@ -1,16 +1,232 @@
-<p>
-  home works!
-  principal
-<p>
-  <img src="../../../assets/images-delete/home.png" />
-
-
-  outras
-  <app-o-projeto></app-o-projeto>
-<p>
-<app-sobre></app-sobre>
-<p>
-<app-atendimento></app-atendimento>
-<p>
-<app-login></app-login>
-<p>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed">
+      <div class="container">
+        <a><img src="../../../assets/images/logo-branco.png" class="logo-menu-1 navbar-brand" href="#"></a>
+        
+          <!-- INICIO MENU RESPONSIVO -->
+          <div class="display-none menu-responsivo">
+            <button class="navbar-toggler btn-menu-hamburguer" type="button" data-toggle="collapse" 
+            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" 
+            aria-label="Toggle navigation">
+              <div id="menu-hamburger" id="sidebarToggle">
+                <span></span>
+                <span></span> 
+                <span></span>
+              </div>
+            </button>
+            <div class="collapse navbar-collapse list-style-none margin-none nav-sub-menu" id="navbarResponsive">
+              <ul class="list-style-none margin-none">  
+                <li class="nav-item">
+                  <div class="input-box">
+                    <input class="textchild-estilo" id="" name="cpf" maxlength="11" required type=""/>
+                    <label  class="textchild-estilo" for="cpf">CPF</label>
+                  </div> 
+                  <button type="submit" class="botao-acessar-conta2">Acessar Conta</button> 
+                </li>
+              </ul>
+              <ul class="navbar-nav ml-auto display-none">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">O Projeto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Sobre</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Atendimento</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- FIM MENU RESPONSIVO -->
+  
+        <div class="collapse navbar-collapse" id="textoNavbar">
+          <ul class="navbar-nav mr-auto align-navbar">
+            <li class="nav-item active nav-li">
+              <a class="nav-link" href="#">O projeto</a>
+            </li>
+            <li class="nav-item nav-li">
+              <a class="nav-link" href="#">Sobre</a>
+            </li>
+            <li class="nav-item nav-li">
+              <a class="nav-link" href="#">Atendimento</a>
+            </li>
+          </ul>
+          <div class="input-box">
+              <input class=" textchild-estilo" id="" name="cpf" maxlength="11" required type=""/>
+              <label  class="textchild-estilo" for="cpf">CPF</label>
+          </div> 
+          <button type="submit" class="botao-acessar-conta">Acessar Conta</button> 
+        </div>
+      </div>
+    </nav>
+  
+    <!-- SLIDE -->
+    <header>
+      <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active" style="background-image: url('../../../assets/images/slide-1.png')">
+            <div class="slide1-text1">
+              <h5>Tenha uma relação saudavel com o seu banco</h5>
+            </div>
+            <div class="slide1-text2">
+                <h5>Seja <b>F³IP</b>. Transforme-se</h5>
+              </div>
+            <div class="carousel-caption d-none d-md-block">
+              <a href="#sobre-o-projeto" class="scrollSuave"><img src="../../../assets/images/scroll-down.png"></a>
+            </div>
+          </div>
+          <div class="carousel-item" style="background-image: url('../../../assets/images/slide-2.png')">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Second Slide</h3>
+              <p>This is a description for the second slide.</p>
+              <a href="#sobre-o-projeto" class="scrollSuave"><img src="../../../assets/images/scroll-down.png"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    
+    
+    <!-- SOBRE O PROJETO -->
+    <div class="container height-full align-itens-center style-project" id="sobre-o-projeto">
+      <div class="row my-4">
+        <div class="col-lg-5 order-last">
+          <img class="img-fluid" src="../../../assets/images/projeto-logo.png" alt="">
+          <br>  
+        </div>
+        <div class="col-lg-7 order-first">
+          <h1>Sobre o projeto</h1>
+          <p>Desenvolvido a partir da proposta de estudo de caso Internet Banking, o projeto <b>F³IP</b>, consiste na criação de uma solução que permite o acessso de  serviços bancários pela internet.<br> <br>Entre os serviços oferecidos  estão, consulta de saldo e extrato, realização de transferências e alteração cadastral.
+            <br>
+            <br>
+            A solução proposta foi desenvolvida em  Angular  5 com typescript, consumindo APIs em NodeJS e MongoDB como repositório. 
+          </p>  
+        </div>
+      </div>
+    </div>
+    
+    <!-- CONHEÇA O NOSSO TIME -->
+    <section class="py-5 height-full align-itens-center time-section">
+      <div class="container position-relative">
+      <div class="row row2">
+        <h1 class="text-align-center">Conheça o nosso time</h1>
+        <div class="card-deck col-12">
+          <div class="card card2 mb-4 "  >
+            <img class="card-img-top" src="../../../assets/images/f-c.png" alt="Fábio Costa">
+            <div class="card-body">
+              <h5>Fábio Costa</h5>
+              <h6>Descrever Função</h6>
+              <div class="redes-sociais">
+                <a href="#"><img class="redes" src="../../../assets/images/github.png" alt="github"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/facebook.png" alt="facebook"></a>
+              </div>
+            </div>  
+          </div>
+          <div class="card card2 mb-4">
+            <img class="card-img-top" src="../../../assets/images/f-m.png" alt="Fábio Morales">
+            <div class="card-body">
+              <h5>Fábio Morales</h5>
+              <h6>Descrever Função</h6>
+              <div class="redes-sociais">
+                <a href="#"><img class="redes" src="../../../assets/images/github.png" alt="github"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/facebook.png" alt="facebook"></a>
+              </div>
+            </div>
+          </div>
+          <div class="card card2 mb-4">
+            <img class="card-img-top" src="../../../assets/images/f-s.png" alt="Fábio Silva">
+            <div class="card-body">
+              <h5>Fábio Silva</h5>
+              <h6>Descrever Função</h6>
+              <div class="redes-sociais">
+                <a href="#"><img class="redes" src="../../../assets/images/github.png" alt="github"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/facebook.png" alt="facebook"></a>
+              </div>
+            </div>
+          </div>
+          <div class="card card2 mb-4">
+            <img class="card-img-top" src="../../../assets/images/i-i.png" alt="Inglid Ianka">
+            <div class="card-body">
+              <h5>Inglid Ianka</h5>
+              <h6>Descrever Função</h6>
+              <div class="redes-sociais">
+                <a href="#"><img class="redes" src="../../../assets/images/github.png" alt="github"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/behance.png" alt="Behance"></a>
+              </div>
+            </div>
+          </div>
+          <div class="card card2 mb-4">
+            <img class="card-img-top" src="../../../assets/images/p-a.png" alt="Palloma Adolfi">
+            <div class="card-body">
+              <h5>Palloma Adolfi</h5>
+              <h6>Descrever Função</h6>
+              <div class="redes-sociais">
+                <a href="#"><img class="redes" src="../../../assets/images/github.png" alt="github"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img class="redes" src="../../../assets/images/facebook.png" alt="facebook"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+    
+    <!-- /.ATENDIMENTO -->
+    <section class="container py-5 height-full align-itens-center">
+      <div class="row justify-content-center">
+        <h1>Atendimento</h1>
+        <p class="text-align-center">Tire suas dúvidas, acesse as dicas de segurança para efetuar transações 
+          seguras ou  fale conosco para obter mais informações sobre os nossos serviços.
+        </p>
+        <div class="col-auto mb-3">
+          <div class="card" >
+            <div class="card-body">
+              <h5 class="card-title">Dúvidas Frequentes</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Som  e quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-3">
+          <div class="card" >
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-auto mb-3">
+          <div class="card" >
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+      </div>
+    </footer>
+  
