--- a/FrontEnd/banking-pif3/src/app/core/components/menu/menu.component.html
+++ b/FrontEnd/banking-pif3/src/app/core/components/menu/menu.component.html
@@ -19,7 +19,7 @@
  <ul class="menu-interno">
  <li class=" header-menu"></li>
  <br>
- <li> <span id="nome"> Olá, Palloma Adolfi</span> </li>
+ <li> <span id="nome"> Olá, {{userVar.user.name}}</span> </li>
  <li><span> <img src="../../../assets/images/menu-saldo.png" class="menu-icones"/> Saldo disponível  <img src="../../../assets/images/expandir.png" class="indicadores"/></span>
  <span id="saldo-menu">Total(R$): <a id="saldo">3.200,00</a></span></li><br>
  <li class="wobble-vertical"> <a [routerLink]="['menu']" href=""><span> <img src="../../../assets/images/menu-home.png" class="menu-icones"/> Inicio</span></a></li>
